--- a/scripts/update_defconfig
+++ b/scripts/update_defconfig
@@ -15,13 +15,27 @@ export KERNEL_CFG
 export OUT_DIR
 
 # Set compiler PATH
-PATH={$HOME}/evo/prebuilts/clang/host/linux-x86/clang-r530567:$HOME/clang/bin:$PATH
+CLANG=~/evo/prebuilts/clang/host/linux-x86/clang-r530567/bin/
+GCC64=~/evo/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/bin/
+GCC32=~/evo/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/bin/
+export PATH=$CLANG:$GCC64:$GCC32:$PATH
+export ARCH=arm64
+export CLANG_TRIPLE="aarch64-linux-gnu-"
+export CROSS_COMPILE="aarch64-linux-android-"
+export CROSS_COMPILE_ARM32="arm-linux-androideabi-"
 
 BUILD="make O=$OUT_DIR \
-ARCH=arm64 \
+CC=clang \
+HOSTCC=gcc \
+LD=ld.lld \
+AS=llvm-as \
+AR=llvm-ar \
+NM=llvm-nm \
+OBJCOPY=llvm-objcopy \
+OBJDUMP=llvm-objdump \
+STRIP=llvm-strip \
 LLVM=1 \
-CLANG_TRIPLE=aarch64-linux-gnu- \
-CROSS_COMPILE=aarch64-linux-gnu- \
+LLVM_IAS=1 \
 -j$(nproc --all)
 "
 export BUILD
